--- a/tongiao.html
+++ b/tongiao.html
@@ -522,32 +522,24 @@
     <h1 style="margin-top: 10px;">Du lịch tôn giáo</h1>
     <main>
         <div class="grid-container">
-            <div class="grid-item" onclick="showinfoBox('Sóc Bom Bo', 'Sóc Bom Bo là điểm tham quan thuộc xã Bình Minh, huyện Bù Đăng, tỉnh Bình Phước. Địa điểm thuộc top điểm đến ở Bình Phước này nằm cách trung tâm thành phố Đồng Xoài khoảng 50km và là địa điểm gắn liền với nhân dân ta trong công cuộc kháng chiến chống Mĩ hào hùng', 'https : //www.youtube.com/embed/SJ7co2HO3DM?si=hwdYIH1-HjzCW83C', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3904.969722792727!2d107.18740307410239!3d11.837393238730856!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174a024b835d737%3A0x7e7f33ca52d795f5!2sS%C3%B3c%20Bom%20Bo!5e0!3m2!1svi!2s!4v1735027712034!5m2!1svi!2s')">
-                <img src="https://imgur.com/1A2zwxG.png.png" alt="Uploaded Image">
-                <h3>Sóc Bom Bo</h3>
-            </div>
-            <div class="grid-item" onclick="showinfoBox('Đình Thần Hưng Long', 'Di tích Đình thần Hưng Long ở phường Hưng Long, thị xã Chơn Thành, tỉnh Bình Phước. Hàng năm, tại Đình diễn ra 4 lễ chính: Lễ Khai Sơn (07/01 âm lịch), lễ Kỳ Yên (15/02 đến ngày 16/02 âm lịch), lễ Cầu Bông (16/7 âm lịch), lễ Đưa Thần (25/12 âm lịch làm lễ đưa thần và 30/12 âm lịch làm lễ rước thần). ', 'https : //www.youtube.com/embed/R-iqiBxXcoA?si=vDhJAj9DWtEpCnJn', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.908967343699!2d106.6117680740962!3d11.41415324710902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ad480803690f%3A0x31bff76d2e8d861a!2zxJDDrG5oIHRo4bqnbiBIxrBuZyBMb25n!5e0!3m2!1svi!2s!4v1735027945107!5m2!1svi!2s')">
-                    <img src="https://imgur.com/a/LEbGOfq.png" alt="Uploaded Image">
-                    <h3>Đình Thần Hưng Long</h3>
-                </div>
              <div class="grid-item" onclick="showinfoBox('Chùa Quang Minh', 'Chùa Quang Minh Bình Phước tọa lạc ngay trên đường quốc lộ 14, thuộc phường Tân Đồng, thành phố Đồng Xoài. Ngôi chùa này được chính thức khởi công xây dựng từ những năm 50 của thế kỷ trước và đã được trùng tu lại vào năm 1990. Gây ấn tượng ngay từ vẻ bề ngoài khi mang một nét cổ kính với những mái ngói đỏ đặc trưng cho phong cách cổ xưa.', 'https : //www.youtube.com/embed/pIvAwXxGHZ8?si=fc_IuGd-ICw38RcH', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d501661.07659266226!2d106.0963200734375!3d10.793906200000011!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175292bad93dcff%3A0x34afdda102b98c71!2sCh%C3%B9a%20Quang%20Minh!5e0!3m2!1svi!2s!4v1735028515236!5m2!1svi!2s')">
-                     <img src="https://imgur.com/a/bIAmWwM.png" alt="Uploaded Image">
+                     <img src="https://imgur.com/4hLykjM.png" alt="Uploaded Image">
                     <h3>Chùa Quang Minh</h3>
               </div>
              <div class="grid-item" onclick="showinfoBox('Chùa Phật Mẫu', 'Nhắc đến Bình Phước người ta sẽ nghĩ ngay đến rừng cao su nhưng ít ai biết rằng nơi đây có nhiều ngôi chùa đẹp và nổi tiếng. Một trong số đó là chùa Phật Mẫu toạ lạc tại huyện Chơn Thành, tỉnh Bình Phước. Nơi đây còn có tên là Kim Điện Địa Mẫu, được biết đến như một chốn bồng lai tiên cảnh với phong cảnh hữu tình nên thơ khiến cho quý Phật tử phải xiêu lòng.', 'https : //www.youtube.com/embed/zW1EaaIXh3c?si=XXAnKhnyy8ND0GqK', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3910.7018056408556!2d106.54700070000001!3d11.4291761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3174ad462caae3e3%3A0xd71cf30f861ae797!2zQ2jDuWEgUGjhuq10IE3huqt1!5e0!3m2!1svi!2s!4v1735031023912!5m2!1svi!2s')">
-                    <img src="https://imgur.com/1A2zwxG.png" alt="Uploaded Image">
+                    <img src="https://imgur.com/aDa9iEG.png" alt="Uploaded Image">
                     <h3>Chùa Phật Mẫu</h3>
             </div>
                 <div class="grid-item" onclick="showinfoBox('Miếu Bà Rá', 'gọi tắt là miếu Bà, còn có các tên gọi khác là Linh Sơn miếu hay miếu Bà Sơn Giang. Miếu Bà ra đời từ thời Pháp thuộc, có hoạt động lễ hội mang đặc trưng văn hóa tín ngưỡng dân gian, truyền thống người Việt ở Nam bộ. Đồng thời ghi dấu truyền thống đấu tranh cách mạng của dân tộc trong cuộc kháng chiến chống thực dân Pháp và đế quốc Mỹ xâm lược. Hằng năm miếu Bà đã trở thành điểm đến tâm linh hấp dẫn của đông đảo khách thập phương trong và ngoài tỉnh (từ mồng 1 đến mồng 3 tháng 3 âm lịch) để vía Bà. ', 'https : //www.youtube.com/embed/am_n1PpSxNI?si=e8KsTBf3OM0XP0RI', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3905.2576352275205!2d106.99710257410207!3d11.81722093913665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31736956b40bb06d%3A0x3870501b8aa231da!2zQ2jDuWEgQsOgIFLDoQ!5e0!3m2!1svi!2s!4v1735031616428!5m2!1svi!2s')">
-                    <img src="https://imgur.com/a/3DW023S.png" alt="Uploaded Image">
+                    <img src="https://imgur.com/k6fIsNV.png" alt="Uploaded Image">
                     <h3>Miếu Bà Rá</h3>
             </div>   
                 <div class="grid-item" onclick="showinfoBox('Chùa Sóc Lớn', 'Chùa Sóc Lớn ở xã Lộc Khánh, huyện Lộc Ninh, tỉnh Bình Phước, là ngôi chùa Khmer lớn, lâu đời nhất, được xây dựng cách nay gần 100 năm, với lối kiến trúc vô cùng đặc sắc, từng lọt vào tóp 100 điểm du lịch văn hóa tâm linh của cả nước được yêu thích vào năm 2016.', 'https : //www.youtube.com/embed/AYq8fZbohkk?si=K6-6QzhIVzn59W9N', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3905.7408887242173!2d106.62479017410156!3d11.783285739817785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31734dd925c4a0e5%3A0xf969d554854027bd!2zQ2jDuWEgU8OzYyBM4bubbiAtIFdhdCBQaHVtIFRob20!5e0!3m2!1svi!2s!4v1735031949067!5m2!1svi!2s')">
-                    <img src="https://imgur.com/a/AxpU4pI.png" alt="Uploaded Image">
+                    <img src="https://imgur.com/RIr3x6D.png" alt="Uploaded Image">
                     <h3>Chùa Sóc Lớn</h3>
             </div> 
                 <div class="grid-item" onclick="showinfoBox('Chùa Đức Bỗn A Lan Nhã', 'Di tích Chùa Đức Bổn A Lan Nhã ở xã Đức Liễu, huyện Bù Đăng, tỉnh Bình Phước, xây dựng từ năm 1950, diện tích đất rộng 10.150,8 m2 ', 'https : //www.youtube.com/embed/zLdvksIuVuA?si=j47_pW0D9ZSfL_Ha', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3906.2773020883965!2d107.06471677410106!3d11.745504340573982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31736f90c00259bd%3A0x688a67d88ff4550d!2zQ2jDuWEgxJDhu6ljIELhu5VuIEEgTGFuIE5ow6M!5e0!3m2!1svi!2s!4v1735032209342!5m2!1svi!2s')">
-                    <img src="https://imgur.com/a/YcByiQ4.png" alt="Uploaded Image">
+                    <img src="https://imgur.com/gFE1AC8.png" alt="Uploaded Image">
                     <h3>Chùa Đức Bổn A Lan Nhã</h3>
             </div> 
         </div>
