--- a/vhstieng.html
+++ b/vhstieng.html
@@ -552,7 +552,7 @@
                 </div>
                 <div class="text-content">
                     <h3 style="color: #ffffff;border: 3px soild #f4e242; background-color: #f4e242;">Bài Hát: Hát Ca Cho Đất Nước</h3>
-                    <p>Bài Hát: Hát Ca Cho Đất Nước cảu dân tộc'S’Tiêng.</br> Nguồn: Lê Văn Công</p>
+                    <p>Bài Hát: Hát Ca Cho Đất Nước của dân tộc'S’Tiêng.</br> Nguồn: Lê Văn Công</p>
                 </div>
             </div>
         </div>
