--- a/ltlh.html
+++ b/ltlh.html
@@ -355,31 +355,31 @@
             </div>
             <div class="grid-item">
                 <a href="https://ctxt.io/2/AAAYKHAwEQ/">
-                    <img src="https://imgur.com/a/cG2rBHD" alt="Ngọc Trâm">
+                    <img src="https://imgur.com/WNsbGx4.png" alt="Ngọc Trâm">
                     <h3 class="h3-box" style="background-color: #ff00ff;">Ngọc Trâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://dulichbinhphuoc.vn/khach-san-huong-sen/">
-                    <img src="https://imgur.com/a/cG2rBHD" alt=" Hương Sen">
+                    <img src="https://imgur.com/a/cG2rBHD.png" alt=" Hương Sen">
                     <h3 class="h3-box" style="background-color: hwb(310 0% 0%);"> Hương Sen</h3>
                 </a>
             </div>
              <div class="grid-item">
                 <a href="https://mapstore.vn/dia-diem/tinh-binh-phuoc/thanh-pho-dong-xoai/phuong-tan-binh/khach-san-sao-mai-121-hung-vuong-phuong-tan-binh-thanh-pho-dong-xoai-tinh-binh-phuoc-1659078587392000/">
-                    <img src="https://imgur.com/a/cG2rBHD" alt=" Sao Mai">
+                    <img src="https://imgur.com/Ah8YYYK.png" alt=" Sao Mai">
                     <h3 class="h3-box" style="background-color: red;"> Sao Mai</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://dulichbinhphuoc.vn/vi-nhanghihoanggia/">
-                    <img src="https://imgur.com/a/Q0NkNR3" alt=" Hoàng Gia">
+                    <img src="https://imgur.com/a/Q0NkNR3.png" alt=" Hoàng Gia">
                     <h3 class="h3-box" style="background-color: #880017;"> Hoàng Gia</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="http://www.thaosonhotel.vn/">
-                    <img src="https://imgur.com/a/bURGA44" alt=" Thảo Sơn">
+                    <img src="https://imgur.com/a/bURGA44.png" alt=" Thảo Sơn">
                     <h3 class="h3-box" style="background-color: rgb(71, 0, 0);"> Thảo Sơn</h3>
                 </a>
             </div>
