--- a/phuongtien.html
+++ b/phuongtien.html
@@ -354,13 +354,13 @@
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/a/TBmzuoq.png" alt="Ngọc Trâm" loading="lazy">
+                    <img src="https://imgur.com/WNsbGx4.png" alt="Ngọc Trâm" loading="lazy">
                     <h3 class="h3-box" style="background-color: rgb(0, 47, 255);">Ngọc Trâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/a/wcVY320.png" alt="Sao Mai" loading="lazy">
+                    <img src="https://imgur.com/Ah8YYYK.png" alt="Sao Mai" loading="lazy">
                     <h3 class="h3-box" style="background-color: rgb(174, 0, 255);">Sao Mai</h3>
                 </a>
             </div>
