--- a/ltlh.html
+++ b/ltlh.html
@@ -361,7 +361,7 @@
             </div>
             <div class="grid-item">
                 <a href="https://dulichbinhphuoc.vn/khach-san-huong-sen/">
-                    <img src="https://imgur.com/a/cG2rBHD.png" alt=" Hương Sen">
+                    <img src="https://imgur.com/BHv5Olz.png" alt=" Hương Sen">
                     <h3 class="h3-box" style="background-color: hwb(310 0% 0%);"> Hương Sen</h3>
                 </a>
             </div>
@@ -370,19 +370,7 @@
                     <img src="https://imgur.com/Ah8YYYK.png" alt=" Sao Mai">
                     <h3 class="h3-box" style="background-color: red;"> Sao Mai</h3>
                 </a>
-            </div>
-            <div class="grid-item">
-                <a href="https://dulichbinhphuoc.vn/vi-nhanghihoanggia/">
-                    <img src="https://imgur.com/a/Q0NkNR3.png" alt=" Hoàng Gia">
-                    <h3 class="h3-box" style="background-color: #880017;"> Hoàng Gia</h3>
-                </a>
-            </div>
-            <div class="grid-item">
-                <a href="http://www.thaosonhotel.vn/">
-                    <img src="https://imgur.com/a/bURGA44.png" alt=" Thảo Sơn">
-                    <h3 class="h3-box" style="background-color: rgb(71, 0, 0);"> Thảo Sơn</h3>
-                </a>
-            </div>
+             </div>
         </section>
         <h1 style="margin-top: 10px;">Lữ hành</h1>
         <section class="grid-container">
