--- a/tintuc.html
+++ b/tintuc.html
@@ -128,20 +128,26 @@
         <h2>Danh Sách Tài Liệu</h2>
         <ul class="file-list">
             <li>
-                <span class="file-name">Tài Liệu 1: Giới Thiệu HTML</span>
-                <a href="https://drive.google.com/uc?id=YOUR_FILE_ID_1&export=download" class="download-btn" target="_blank">
+                <span class="file-name">Tài liệu Chương trình địa phương 9</span>
+                <a href="https://drive.google.com/file/d/1sieeezMUWBokyIN1-WHoPU_WFlCQOcjg/view?usp=sharing" class="download-btn" target="_blank">
                     <i class="fas fa-download"></i>Tải xuống
                 </a>
             </li>
             <li>
-                <span class="file-name">Tài Liệu 2: Hướng Dẫn CSS</span>
-                <a href="https://drive.google.com/uc?id=YOUR_FILE_ID_2&export=download" class="download-btn" target="_blank">
+                <span class="file-name">Tài liệu Chương trình địa phương 8</span>
+                <a href="https://drive.google.com/file/d/1meEDch6UoTAmF2oiBmpXvVXk6aAVfUtT/view?usp=sharing" class="download-btn" target="_blank">
                     <i class="fas fa-download"></i>Tải xuống
                 </a>
             </li>
             <li>
-                <span class="file-name">Tài Liệu 3: JavaScript Cơ Bản</span>
-                <a href="https://drive.google.com/uc?id=YOUR_FILE_ID_3&export=download" class="download-btn" target="_blank">
+                <span class="file-name">Tài liệu Chương trình địa phương 7</span>
+                <a href="https://drive.google.com/file/d/15r4ZX0rR7K9YID8cjMFia8aE1KFoJ6d7/view?usp=sharing" class="download-btn" target="_blank">
+                    <i class="fas fa-download"></i>Tải xuống
+                </a>
+            </li>
+            <li>
+                <span class="file-name">Tài liệu Chương trình địa phương 6</span>
+                <a href="https://drive.google.com/file/d/1Ygji1PcliAg_hdmQJoeLu7OjAU82r_xJ/view?usp=sharing" class="download-btn" target="_blank">
                     <i class="fas fa-download"></i>Tải xuống
                 </a>
             </li>
