--- a/amnhac.html
+++ b/amnhac.html
@@ -22,7 +22,7 @@
     .hero{
         width: 100%;
         height: auto;
-        background: url(https://imgur.com/ctzx6M9.png);
+        background: url(https://i.imgur.com/ctzx6M9.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -292,7 +292,7 @@
             </div>
             <!-- Nút hiển thị chatbot -->
             <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
     <footer>
         <div class="content">
