--- a/amthuc.html
+++ b/amthuc.html
@@ -18,7 +18,7 @@
         .hero{
             width: 100%;
             height: auto;
-            background: url(https://imgur.com/ctzx6M9.png);
+            background: url(https://i.imgur.com/ctzx6M9.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -292,49 +292,49 @@
         <h3>ĐẶC SẢN BÌNH PHƯỚC</h3>
         <div class="recipe-section">
             <div class="recipe-card">
-                <img src="https://imgur.com/LHkBMe8.png" alt="Hạt điều rang muối">
+                <img src="https://i.imgur.com/LHkBMe8.png" alt="Hạt điều rang muối">
                 <h2>Hạt điều rang muối</h2>
                 <p>Là vùng đất chuyên trồng điều vì thế hạt điều rang muối Bình Phước luôn giữ được nguyên vỏ lụa, vị ngọt, hương thơm đậm đà. Khi ăn hạt điều giòn tan và giữ được hương vị lâu hơn hạt điều vùng khác. </br> Vỏ lụa là lớp vỏ mỏng màu loang lổ nâu đôi khi pha nhiều sắc trắng là lớp phân cách giữa nhân hạt điều ăn được và lớp vỏ cứng bảo vệ bên ngoài.</p>
                 <a href="https://dacsanvina.vn/10-mon-ngon-khong-the-nao-quen-o-vung-que-binh-phuoc-d106031/">Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/VHxMcGD.png" alt="Gỏi trái điều">
+                <img src="https://i.imgur.com/VHxMcGD.png" alt="Gỏi trái điều">
                 <h2>Gỏi trái điều</h2>
                 <p>Trái điều để làm gỏi rất ngon, vị chua chua ngọt ngọt được thêm một chút gì đó mặn mà của gia vị, rồi lại thêm miếng tôm, miếng thịt là được một món ăn lạ mắt, lại rẻ.</p>
                 <a href="https://dacsanvina.vn/10-mon-ngon-khong-the-nao-quen-o-vung-que-binh-phuoc-d106031/">Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/H2eeoKY.png" alt="Bánh hạt điều Bình Phước">
+                <img src="https://i.imgur.com/H2eeoKY.png" alt="Bánh hạt điều Bình Phước">
                 <h2>Bánh hạt điều Bình Phước</h2>
                 <p>Nguyên liệu chính để làm bánh hạt điều là hạt điều, bột nổi, bột quế, trứng gà, đường, bột mì, một chút dầu ăn.</p>
                 <a href=" https://dacsanvina.vn/10-mon-ngon-khong-the-nao-quen-o-vung-que-binh-phuoc-d106031/">Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/0Xy1BjY.png" alt="Thịt quay từ heo thả rông">
+                <img src="https://i.imgur.com/0Xy1BjY.png" alt="Thịt quay từ heo thả rông">
                 <h2>Thịt quay từ heo thả rông</h2>
                 <p>Là loại heo được người dân tộc thiểu số sinh sống quanh vùng Sóc Bom Bo nuôi, heo thả rông là loại bán hoang dã, ban ngày được thả rông đi tìm thức ăn và ban đêm trở về chuồng của gia đình. Bởi vì ăn các loại rau củ và đi khắp nơi tìm kiếm thức ăn nên thịt heo thả rông săn chắc, ít mỡ, khi ăn không bị ngấy. </p>
                 <a href=https://mia.vn/cam-nang-du-lich/heo-tha-rong-dac-san-hap-dan-cua-vung-soc-bom-bo-7136>Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/0KE26hk.png" alt="Lá nhíp xào">
+                <img src="https://i.imgur.com/0KE26hk.png" alt="Lá nhíp xào">
                 <h2>Lá nhíp xào</h2>
                 <p>Để chế biến món ăn này, người ta nhặt bỏ những lá sâu, rửa sạch, để ráo, vò sơ. Tỏi bóc vỏ, bằm sơ, sau đó xào với dầu nóng, rồi cho rau nhíp vào đảo nhanh tay, cho thịt bò đã được xào sẵn vào rồi rắc tiêu. Khi ăn, bạn sẽ cảm nhận được cả hương vị của núi rừng thấm đẫm nơi đầu lưỡi. </p>
                 <a href=https://vietnamnet.vn/dac-san-binh-phuoc-thom-ngon-doc-la-thu-hut-du-khach-gan-xa-2161605.html>Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/9KNRaKz.png" alt="Đọt mây nướng">
+                <img src="https://i.imgur.com/9KNRaKz.png" alt="Đọt mây nướng">
                 <h2>Đọt mây nướng</h2>
                 <p>Đọt mây là một món ăn không thể thiếu trong bữa cơm của người đồng bào S’Tiêng ở Bình Phước. Đọt mây nướng dưới than củi hồng, thơm thơm, ngầy ngậy. </p>
                 <a href=https://vietnamnet.vn/dac-san-binh-phuoc-thom-ngon-doc-la-thu-hut-du-khach-gan-xa-2161605.html>Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/ECQZhJW.png" alt="Canh thụt">
+                <img src="https://i.imgur.com/ECQZhJW.png" alt="Canh thụt">
                 <h2>Canh thụt</h2>
                 <p>Món Canh thụt độc đáo này được tạo nên từ nhiều loại rau rừng khác nhau như Lá nhíp, củ nén, ớt tươi cùng nhiều loại gia vị đặc trưng. Có tổng cộng khoảng 10 loại nguyên liệu được sử dụng để làm nên món ăn này và sự kết hợp của chúng tạo nên một hương vị riêng biệt cho Canh thụt.</p>
                 <a href=https://youtu.be/n6SGQrTbcZI>Xem thêm</a>
             </div>
             <div class="recipe-card">
-                <img src="https://imgur.com/EUXHYQH.png" alt="Rượu cần">
+                <img src="https://i.imgur.com/EUXHYQH.png" alt="Rượu cần">
                 <h2>Rượu cần</h2>
                 <p>Rượu cần theo tiếng S'Tiêng là thức uống độc đáo và cũng là một loại sản vật gắn chặt với đời sống văn hóa, tâm linh, tín ngưỡng của đồng bào dân tộc S’Tiêng ở Bình Phước. Rượu cần được chế biến theo một quy trình công phu, nghiêm ngặt, đòi hỏi người chế biến phải có kinh nghiệm, tay nghề cao.</p>
                 <a href=https://youtu.be/n6SGQrTbcZI>Xem thêm</a>
@@ -409,7 +409,7 @@
             </div>
             <!-- Nút hiển thị chatbot -->
             <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
             <div id="cookie-banner" class="cookie-banner">
                 <p>Trang web này sử dụng cookie để cải thiện trải nghiệm của bạn. Bạn có đồng ý không?</p>
