--- a/game.html
+++ b/game.html
@@ -264,7 +264,7 @@
   .hero{
       width: 100%;
       height: auto;
-      background: url(https://imgur.com/Chj2Txy.png);
+      background: url(https://i.imgur.com/Chj2Txy.png);
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
@@ -510,7 +510,7 @@
         <div class="games-grid">
           <!-- Game 1 -->
           <div class="game-card">
-            <img src="https://imgur.com/neL4ugS.png" alt="Game Scratch">
+            <img src="https://i.imgur.com/neL4ugS.png" alt="Game Scratch">
             <div class="game-info">
               <h3>MEMORY CHALLENGE</h3>
               <p>Thử thách trí nhớ, vượt qua mọi giới hạn!</p>
@@ -524,7 +524,7 @@
     
           <!-- Game 2 -->
           <div class="game-card">
-            <img src="https://imgur.com/8azWJwr.png" alt="Game Scratch">
+            <img src="https://i.imgur.com/8azWJwr.png" alt="Game Scratch">
             <div class="game-info">
               <h3>RING THE GOLDEN BELL</h3>
               <p>Rung Chuông Vàng - Kiến Thức Vang Danh!</p>
@@ -538,7 +538,7 @@
     
           <!-- Game 3 -->
           <div class="game-card">
-            <img src="https://imgur.com/1PgN214.png" alt="Game Scratch">
+            <img src="https://i.imgur.com/1PgN214.png" alt="Game Scratch">
             <div class="game-info">
               <h3>TRY KNOWLEDGEABLE</h3>
               <p>Kiến thức tạo nên sự thông thái</p>
@@ -580,7 +580,7 @@
     </div>
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
     <footer>
         <div class="content">
