--- a/home.html
+++ b/home.html
@@ -218,7 +218,7 @@
         .hero{
             width: 100%;
             height: auto;
-            background: url(https://imgur.com/11OjPkb.png);
+            background: url(https://i.imgur.com/11OjPkb.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -231,7 +231,7 @@
 
         .hero h2 {
             font-family: 'Bungee';
-            font-size: 100px;
+            font-size: 90px;
             margin-bottom: 10px;
             color: #ffffff; /* Màu chữ chính */
             animation: bounce 1s infinite, strokeColorChange 5s linear infinite; /* Thêm hiệu ứng nhảy và đổi màu viền */
@@ -572,31 +572,31 @@
 <h1 style="margin:10px 0 10px 0;">Information</h1>
 <div class="slider">
   <div class="slide active">
-    <img src="https://imgur.com/QcuMFmz.png" alt="">
+    <img src="https://i.imgur.com/QcuMFmz.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/2Z0762q.png" alt="">
+    <img src="https://i.imgur.com/2Z0762q.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/T0A9CJq.png" alt="">
+    <img src="https://i.imgur.com/T0A9CJq.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/FuA2tDc.png" alt="">
+    <img src="https://i.imgur.com/FuA2tDc.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/lNiZCsZ.png" alt="">
+    <img src="https://i.imgur.com/lNiZCsZ.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/2kG3PNe.png" alt="">
+    <img src="https://i.imgur.com/2kG3PNe.png" alt="">
   </div>
 
   <div class="slide active">
-    <img src="https://imgur.com/3olJpqP.png" alt="">
+    <img src="https://i.imgur.com/3olJpqP.png" alt="">
   </div>
 
 
@@ -644,7 +644,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
 
     <footer>
