--- a/hotel.html
+++ b/hotel.html
@@ -71,7 +71,7 @@
         .hero{
             width: 100%;
             height: auto;
-            background: url(https://imgur.com/eU7mniG.png);
+            background: url(https://i.imgur.com/eU7mniG.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -324,43 +324,43 @@
             <!-- Hàng 1 -->
             <div class="grid-item">
                 <a href="https://www.anlochotelspa.com/">
-                    <img src="https://imgur.com/xOi8ahy.png" alt="An Lộc" loading="lazy">
+                    <img src="https://i.imgur.com/xOi8ahy.png" alt="An Lộc" loading="lazy">
                     <h3 class="h3-box" style="background-color: red;">An Lộc</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://app.vntrip.vn/hotel/vn/phuong-lam-hotel-11840">
-                    <img src="https://imgur.com/8VRUsMy.png" alt="Phương Lâm" loading="lazy">
+                    <img src="https://i.imgur.com/8VRUsMy.png" alt="Phương Lâm" loading="lazy">
                     <h3 class="h3-box" style="background-color: orangered;">Phương Lâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://khachsantrinhgia.com/">
-                    <img src="https://imgur.com/mMIPhkh.png" alt="Trình Ga" loading="lazy">
+                    <img src="https://i.imgur.com/mMIPhkh.png" alt="Trình Ga" loading="lazy">
                     <h3 class="h3-box" style="background-color: darkgoldenrod;">Trình Ga</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.bombohotel.vn/">
-                    <img src="https://imgur.com/HXvAzcO.png" alt=" Bom Bo" loading="lazy">
+                    <img src="https://i.imgur.com/HXvAzcO.png" alt=" Bom Bo" loading="lazy">
                     <h3 class="h3-box" style="background-color: green;">Bom Bo</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/cueRRnd.png" alt="Mỹ Lệ" loading="lazy">
+                    <img src="https://i.imgur.com/cueRRnd.png" alt="Mỹ Lệ" loading="lazy">
                     <h3 class="h3-box" style="background-color: lightseagreen;">Mỹ Lệ</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/a/TBmzuoq.png" alt="Ngọc Trâm" loading="lazy">
+                    <img src="https://i.imgur.com/a/TBmzuoq.png" alt="Ngọc Trâm" loading="lazy">
                     <h3 class="h3-box" style="background-color: rgb(0, 47, 255);">Ngọc Trâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/a/wcVY320.png" alt="Sao Mai" loading="lazy">
+                    <img src="https://i.imgur.com/a/wcVY320.png" alt="Sao Mai" loading="lazy">
                     <h3 class="h3-box" style="background-color: rgb(174, 0, 255);">Sao Mai</h3>
                 </a>
             </div>
@@ -389,7 +389,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
 
     <footer>
