--- a/hotro.html
+++ b/hotro.html
@@ -135,7 +135,7 @@
     </div>
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
 
     <footer>
