--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
   <div class="infocircle-button">
     <a href="test.html">
-      <img src="https://imgur.com/4qFSiph.png" alt="Icon">
+      <img src="https://i.imgur.com/4qFSiph.png" alt="Icon">
     </a>
   </div>
 
@@ -325,11 +325,11 @@
     <div class="flags">
       <!-- Nút cờ Việt Nam chuyển đến home.html với ảnh mới -->
       <a href="home.html" class="flag-button">
-        <img src="https://imgur.com/9Jm93Po.png" alt="Việt Nam">
+        <img src="https://i.imgur.com/9Jm93Po.png" alt="Việt Nam">
       </a>
       <!-- Nút cờ Anh chuyển đến home-en.html -->
       <a href="home-en.html" class="flag-button">
-        <img src="https://imgur.com/ix0zn3x.png" alt="Anh">
+        <img src="https://i.imgur.com/ix0zn3x.png" alt="Anh">
       </a>
     </div>
   </div>
