--- a/langnghe.html
+++ b/langnghe.html
@@ -152,7 +152,7 @@
         .hero {
             width: 100%; /* Chiều rộng 100% màn hình */
             height: auto; /* Chiều cao tự động */
-            background: url(https://imgur.com/2uXjh43.png); /* Hình nền hero */
+            background: url(https://i.imgur.com/2uXjh43.png); /* Hình nền hero */
             background-repeat: no-repeat; /* Không lặp lại hình nền */
             background-size: cover; /* Phóng to hình nền để phủ hết phần tử */
             background-position: center; /* Căn giữa hình nền */
@@ -523,11 +523,11 @@
     <main>
         <div class="grid-container">
             <div class="grid-item" onclick="showinfoBox('Nghề dệt thổ cẩm của dân tộc S’tiêng', ' Các thiếu nữ S’Tiêng tuổi từ 13 đến 15 được bà, mẹ, cô, dì trong nhà truyền lại nghề dệt thổ cẩm. Bằng đôi tay khéo léo, sự cần cù, óc sáng tạo; bằng các nguyên vật liệu sẵn có từ rừng, phụ nữ S’Tiêng đã dệt nên những sản phẩm tinh xảo, có hoa văn độc đáo, màu sắc rực rỡ vừa mang tính dân gian, vừa mang tính hiện đại của cuộc sống.', 'https://www.youtube.com/embed/F18_5z9qC4w?si=XOj2RmGiFuCwEYzA', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49995776780139795!2d10664745262918778!3d1177067933505554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f131!3m3!1m2!1s0x3173772c54246c2f%3A0x36b50743b758dd81!2zQsO5IMSQxINuZywgQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1734681568757!5m2!1svi!2s')">
-                <img src="https://imgur.com/I5VigMS.png" alt="Uploaded Image">
+                <img src="https://i.imgur.com/I5VigMS.png" alt="Uploaded Image">
                 <h3>Nghề dệt thổ cẩm dân tộc S’tiêng</h3>
             </div>
                 <div class="grid-item" onclick="showinfoBox('Nghề đan gùi của người S’tiêng', 'Nghề đan gùi của người S’tiêng là nghề thủ công truyền thống được tích lũy, phát triển qua nhiều thế hệ, thể hiện kỹ thuật qua bàn tay khéo léo và sáng tạo của người nghệ nhân S’tiêng. ', 'https://www.youtube.com/embed/rY901jqlzp4?si=lMA0l_zaZYetczhq', 'https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d499957.76780139795!2d106.64745262918778!3d11.77067933505554!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3173772c54246c2f%3A0x36b50743b758dd81!2zQsO5IMSQxINuZywgQsOsbmggUGjGsOG7m2MsIFZp4buHdCBOYW0!5e0!3m2!1svi!2s!4v1734681568757!5m2!1svi!2s')">
-                    <img src="https://imgur.com/ot3Whgk.png" alt="Uploaded Image">
+                    <img src="https://i.imgur.com/ot3Whgk.png" alt="Uploaded Image">
                     <h3>Nghề đan gùi của người S’tiêng</h3>
             </div>
         </div>
@@ -566,7 +566,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
 
     <div id="cookie-banner" class="cookie-banner">
