--- a/ltlh.html
+++ b/ltlh.html
@@ -71,7 +71,7 @@
         .hero{
             width: 100%;
             height: auto;
-            background: url(https://imgur.com/eU7mniG.png);
+            background: url(https://i.imgur.com/eU7mniG.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -325,83 +325,95 @@
             <!-- Hàng 1 -->
             <div class="grid-item">
                 <a href="https://www.anlochotelspa.com/">
-                    <img src="https://imgur.com/xOi8ahy.png" alt="An Lộc">
+                    <img src="https://i.imgur.com/xOi8ahy.png" alt="An Lộc">
                     <h3 class="h3-box" style="background-color: red;">An Lộc</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://app.vntrip.vn/hotel/vn/phuong-lam-hotel-11840">
-                    <img src="https://imgur.com/8VRUsMy.png" alt="Khách sạn Phương Lâm">
+                    <img src="https://i.imgur.com/8VRUsMy.png" alt="Khách sạn Phương Lâm">
                     <h3 class="h3-box" style="background-color: yellow;">Phương Lâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://khachsantrinhgia.com/">
-                    <img src="https://imgur.com/mMIPhkh.jpg" alt="Khách sạn Trình Ga">
+                    <img src="https://i.imgur.com/mMIPhkh.jpg" alt="Khách sạn Trình Ga">
                     <h3 class="h3-box" style="background-color: green;">Trình Ga</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.bombohotel.vn/">
-                    <img src="https://imgur.com/HXvAzcO.jpg" alt="Khách sạn Bom Bo">
+                    <img src="https://i.imgur.com/HXvAzcO.jpg" alt="Khách sạn Bom Bo">
                     <h3 class="h3-box" style="background-color: lightseagreen;">Bom Bo</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.agoda.com/vi-vn/my-le-hotel/hotel/phuoc-long-binh-phuoc-vn.html?ds=JRFMuX5B0C5GlGGs">
-                    <img src="https://imgur.com/cueRRnd.jpg" alt="Khách sạn Mỹ Lệ">
+                    <img src="https://i.imgur.com/cueRRnd.jpg" alt="Khách sạn Mỹ Lệ">
                     <h3 class="h3-box" style="background-color: blue;">Mỹ Lệ</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://ctxt.io/2/AAAYKHAwEQ/">
-                    <img src="https://imgur.com/WNsbGx4.png" alt="Ngọc Trâm">
+                    <img src="https://i.imgur.com/a/cG2rBHD" alt="Ngọc Trâm">
                     <h3 class="h3-box" style="background-color: #ff00ff;">Ngọc Trâm</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://dulichbinhphuoc.vn/khach-san-huong-sen/">
-                    <img src="https://imgur.com/BHv5Olz.png" alt=" Hương Sen">
+                    <img src="https://i.imgur.com/a/cG2rBHD" alt=" Hương Sen">
                     <h3 class="h3-box" style="background-color: hwb(310 0% 0%);"> Hương Sen</h3>
                 </a>
             </div>
              <div class="grid-item">
                 <a href="https://mapstore.vn/dia-diem/tinh-binh-phuoc/thanh-pho-dong-xoai/phuong-tan-binh/khach-san-sao-mai-121-hung-vuong-phuong-tan-binh-thanh-pho-dong-xoai-tinh-binh-phuoc-1659078587392000/">
-                    <img src="https://imgur.com/Ah8YYYK.png" alt=" Sao Mai">
+                    <img src="https://i.imgur.com/a/cG2rBHD" alt=" Sao Mai">
                     <h3 class="h3-box" style="background-color: red;"> Sao Mai</h3>
                 </a>
-             </div>
+            </div>
+            <div class="grid-item">
+                <a href="https://dulichbinhphuoc.vn/vi-nhanghihoanggia/">
+                    <img src="https://i.imgur.com/a/Q0NkNR3" alt=" Hoàng Gia">
+                    <h3 class="h3-box" style="background-color: #880017;"> Hoàng Gia</h3>
+                </a>
+            </div>
+            <div class="grid-item">
+                <a href="http://www.thaosonhotel.vn/">
+                    <img src="https://i.imgur.com/a/bURGA44" alt=" Thảo Sơn">
+                    <h3 class="h3-box" style="background-color: rgb(71, 0, 0);"> Thảo Sơn</h3>
+                </a>
+            </div>
         </section>
         <h1 style="margin-top: 10px;">Lữ hành</h1>
         <section class="grid-container">
                 <!-- Hàng 1 -->
                 <div class="grid-item">
                     <a href="https://xekhachbinhphuoc.vn/">
-                        <img src="https://imgur.com/9sUS0Lv.png" alt="  Petro Bình Phước">
+                        <img src="https://i.imgur.com/9sUS0Lv.png" alt="  Petro Bình Phước">
                         <h3 class="h3-box" style="background-color: red;"> Petro Bình Phước</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://vexere.com/vi-VN/xe-minh-an-thu-ky">
-                        <img src="https://imgur.com/MIN5FGG.png" alt="  Thư Kì">
+                        <img src="https://i.imgur.com/MIN5FGG.png" alt="  Thư Kì">
                         <h3 class="h3-box" style="background-color: orangered;">Thư Kì</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://thanhcongbus.vn/">
-                        <img src="https://imgur.com/1N4GgoX.jpg" alt="  Thành Công">
+                        <img src="https://i.imgur.com/1N4GgoX.jpg" alt="  Thành Công">
                         <h3 class="h3-box" style="background-color: rgb(255, 255, 0);">Thành Công</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://vexere.com/vi-VN/xe-tu-nhi/so-dien-thoai-dia-chi-xe-tu-nhi">
-                        <img src="https://imgur.com/eUe9jc8.jpeg" alt="  Tú Nhi">
+                        <img src="https://i.imgur.com/eUe9jc8.jpeg" alt="  Tú Nhi">
                         <h3 class="h3-box" style="background-color: green;">Tú Nhi</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://hoangyenlogistics.vn/">
-                        <img src="https://imgur.com/K42tp7N.jpg" alt="  Hoàng Yến Logistics">
+                        <img src="https://i.imgur.com/K42tp7N.jpg" alt="  Hoàng Yến Logistics">
                         <h3 class="h3-box" style="background-color: lightseagreen;">Hoàng Yến Logistics</h3>
                     </a>
                 </div>
@@ -409,31 +421,31 @@
                 <!-- Hàng 2 -->
                 <div class="grid-item">
                     <a href="https://datxegrabbrvt.com/grab-binh-phuoc/">
-                        <img src="https://imgur.com/ZR7hiAK.png" alt="Grap">
+                        <img src="https://i.imgur.com/ZR7hiAK.png" alt="Grap">
                         <h3 class="h3-box" style="background-color: blue;">Grap</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://mailinh.vn/">
-                        <img src="https://imgur.com/ubJyXy5.png" alt="Taxi Mai Linh Bình Phước">
+                        <img src="https://i.imgur.com/ubJyXy5.png" alt="Taxi Mai Linh Bình Phước">
                         <h3 class="h3-box" style="background-color: #ff00ff;">Taxi Mai Linh</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://example.com">
-                        <img src="https://imgur.com/ixqaqXv.png" alt="Taxi Thắng Lợi">
+                        <img src="https://i.imgur.com/ixqaqXv.png" alt="Taxi Thắng Lợi">
                         <h3 class="h3-box" style="background-color: purple;">Taxi Thắng Lợi</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="https://example.com">
-                        <img src="https://imgur.com/33Qa8od.jpg" alt="Taxi Vinasun">
+                        <img src="https://i.imgur.com/33Qa8od.jpg" alt="Taxi Vinasun">
                         <h3 class="h3-box" style="background-color: darkred;">Taxi Vinasun</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="http://taxithaonhi.com/">
-                        <img src="https://imgur.com/5Pyjqkh.jpg" alt="  Thảo Nhi">
+                        <img src="https://i.imgur.com/5Pyjqkh.jpg" alt="  Thảo Nhi">
                         <h3 class="h3-box" style="background-color: darkgoldenrod;">  Thảo Nhi</h3>
                     </a>
                 </div>
@@ -441,13 +453,13 @@
                 <!-- Hàng 3 -->
                 <div class="grid-item">
                     <a href="https://busmap.vn/">
-                        <img src="https://imgur.com/vKabqi6.jpg" alt="Buýt Bình Phước">
+                        <img src="https://i.imgur.com/vKabqi6.jpg" alt="Buýt Bình Phước">
                         <h3 class="h3-box" style="background-color:darkgreen;">Buýt Bình Phước</h3>
                     </a>
                 </div>
                 <div class="grid-item">
                     <a href="http://thuexebinhphuoc.com/">
-                        <img src="https://imgur.com/X9lORQy.jpg" alt="  Lê Hoàng">
+                        <img src="https://i.imgur.com/X9lORQy.jpg" alt="  Lê Hoàng">
                         <h3 class="h3-box" style="background-color: darkblue;">  Lê Hoàng</h3>
                     </a>
                 </div>
@@ -456,31 +468,31 @@
         <section class="grid-container">
             <div class="grid-item">
                 <a href="https://www.yellowpages.vn/lgs/1187742312/cong-ty-tnhh-mtv-tm-va-dv-du-lich-thanh-binh.html/">
-                    <img src="https://imgur.com/a/RIjmda8TM" alt="  Công Ty TNHH MTV TM Và DV Du Lịch Thanh Bình">
+                    <img src="https://i.imgur.com/a/RIjmda8TM" alt="  Công Ty TNHH MTV TM Và DV Du Lịch Thanh Bình">
                     <h3 class="h3-box" style="background-color: darkblue;">  Công Ty TNHH MTV TM Và DV Du Lịch Thanh Bình</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.yellowpages.vn/lgs/1187704899/cong-ty-tnhh-dich-vu-du-lich-tin-viet.html/">
-                    <img src="https://imgur.com/a/CfWwRAg" alt="  Công Ty TNHH Dịch Vụ Du Lịch Tín Việt">
+                    <img src="https://i.imgur.com/a/CfWwRAg" alt="  Công Ty TNHH Dịch Vụ Du Lịch Tín Việt">
                     <h3 class="h3-box" style="background-color: darkblue;">  Công Ty TNHH Dịch Vụ Du Lịch Tín Việt</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="http://songbetourist.vn/">
-                    <img src="https://imgur.com/a/z8EjQ51"alt="  Công Ty TNHH Dịch Vụ Du Lịch Sông Bé">
+                    <img src="https://i.imgur.com/a/z8EjQ51"alt="  Công Ty TNHH Dịch Vụ Du Lịch Sông Bé">
                     <h3 class="h3-box" style="background-color: darkblue;">  Công Ty TNHH Du Lịch Lữ Hành Sông Bé</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://www.yellowpages.vn/lgs/1187720685/cong-ty-tnhh-quoc-te-denver.html/">
-                    <img src="https://imgur.com/a/NlGC8sJ" alt="  Công Ty TNHH Quốc Tế Denver">
+                    <img src="https://i.imgur.com/a/NlGC8sJ" alt="  Công Ty TNHH Quốc Tế Denver">
                     <h3 class="h3-box" style="background-color: darkblue;">   Công Ty TNHH Quốc Tế Denver</h3>
                 </a>
             </div>
             <div class="grid-item">
                 <a href="https://masothue.com/0307899845-cong-ty-tnhh-dich-vu-du-lich-nang-viet/">
-                    <img src="https://imgur.com/a/FIY7jCj"  alt="  Công Ty TNHH Dịch Vụ Du Lịch Nắng Việ">
+                    <img src="https://i.imgur.com/a/FIY7jCj"  alt="  Công Ty TNHH Dịch Vụ Du Lịch Nắng Việ">
                     <h3 class="h3-box" style="background-color: darkblue;">  Công Ty TNHH Dịch Vụ Du Lịch Nắng Việt</h3>
                 </a>
             </div>
@@ -506,7 +518,7 @@
 
     <!-- Nút hiển thị chatbot -->
     <button class="show-chat-btn" onclick="toggleChat()">
-        <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+        <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
     </button>
 
     <footer>
