--- a/vhstieng.html
+++ b/vhstieng.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Du lịch Bình Phước</title>
+    <title>Bình Phước Fantastic Tour</title>
     <link rel="icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -17,7 +17,7 @@
     .hero{
         width: 100%;
         height: auto;
-        background: url(https://imgur.com/EahuCL3.png);
+        background: url(https://i.imgur.com/EahuCL3.png);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -472,35 +472,35 @@
     </section>
     <div class="slider">
         <div class="slide active">
-          <img src="https://imgur.com/PP981IH.png" alt="">
+          <img src="https://i.imgur.com/PP981IH.png" alt="">
           <div class="info">
             <h2>LỄ HỘI CẦU MƯA</h2>
             <p>Lễ hội cầu mưa của đồng bào S’Tiêng thị trấn Tân Khai được phục dựng và duy trì hàng năm với ý nghĩa cầu cho mưa thuận gió hòa, để vạn vật được sinh sôi, nẩy nở, mùa màng bội thu, Lễ hội cầu mưa còn là dịp để kết nối cộng đồng, đưa dân làng, mọi người đến gần nhau hơn. Đây cũng là ngày hội chung, giúp cho mọi người thêm gắn kết, cùng nhau chung tay xây dựng cũng như phát triển cộng đồng thêm tốt đẹp.</p>
           </div>
         </div>
         <div class="slide">
-          <img src="https://imgur.com/Jq5ghqB.png" alt="">
+          <img src="https://i.imgur.com/Jq5ghqB.png" alt="">
           <div class="info">
             <h2>Lễ hội mừng lúa mới</h2>
             <p>Lễ hội Mừng lúa mới là hoạt động văn hóa truyền thống đặc sắc của đồng bào S’tiêng, với ý nghĩa tạ ơn thần linh đã mang đến mùa màng bội thu, mưa thuận gió hòa, cầu cho năm mới mạnh khỏe, ấm no. Đồng thời cũng là dịp để dân làng tề tựu, cùng chia sẻ niềm vui được mùa.</p>
           </div>
         </div>
         <div class="slide">
-          <img src="https://imgur.com/8jyJWdv.png" alt="">
+          <img src="https://i.imgur.com/8jyJWdv.png" alt="">
           <div class="info">
             <h2>Lễ hội phá Bàu</h2>
             <p>Theo quan niệm của người S’Tiêng, bàu là nơi linh thiêng, việc phá bàu là để mở cửa cho thần linh ban phúc lành cho người dân. Vì vậy, tại lễ hội phá bàu, sau nghi thức cúng thần linh của già làng, người dân sẽ cùng nhau xuống phá bàu. Khi bàu đã được phá, tất cả mọi người sẽ cùng nhau vào bắt cá.</p>
           </div>
         </div>
         <div class="slide">
-          <img src="https://imgur.com/fXOpcf1.png" alt="">
+          <img src="https://i.imgur.com/fXOpcf1.png" alt="">
           <div class="info">
             <h2>Nhạc cụ truyền thống</h2>
             <p>Đàn tre (đinh jut) thuộc bộ dây, được làm từ ống tre lồ ô, đường kính từ 5-6cm, dài khoảng 50-60cm. Đàn gồm 2 dây làm bằng cật tre được tước ra từ chính ống tre và dùng 3 mảnh tre nhỏ khác làm ngựa đàn căng dây chia đều ở 3 vị trí 2 đầu và giữa. Ống lồ ô thường được chọn có 2 đầu mấu.</p>
           </div>
         </div>
         <div class="slide">
-          <img src="https://imgur.com/7XGJCAv.png" alt="">
+          <img src="https://i.imgur.com/7XGJCAv.png" alt="">
           <div class="info">
             <h2>Nhạc cụ truyền thống</h2>
             <p>Cồng chiêng là nhạc cụ thuộc bộ gõ bằng hợp kim đồng, hình tròn, ở giữa có hoặc không có núm, đường kính khoảng từ 20 cm lên đến 120 cm.</p>
@@ -552,7 +552,7 @@
                 </div>
                 <div class="text-content">
                     <h3 style="color: #ffffff;border: 3px soild #f4e242; background-color: #f4e242;">Bài Hát: Hát Ca Cho Đất Nước</h3>
-                    <p>Bài Hát: Hát Ca Cho Đất Nước của dân tộc'S’Tiêng.</br> Nguồn: Lê Văn Công</p>
+                    <p>Bài Hát: Hát Ca Cho Đất Nước cảu dân tộc S’Tiêng.</br> Nguồn: Lê Văn Công</p>
                 </div>
             </div>
         </div>
@@ -598,7 +598,7 @@
             </div>
             <!-- Nút hiển thị chatbot -->
             <button class="show-chat-btn" onclick="toggleChat()">
-                <img src="https://imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
+                <img src="https://i.imgur.com/CVql8td.png" alt="Chat Icon" class="chat-icon">
             </button>
     <footer>
         <div class="content">
